# automation-exercise-py

./: .gitignore  Dockerfile  README.md  docker-compose.ci.yaml  docker-compose.yaml  index.html  pyproject.toml  run_project.e2e.sh  run_project.e2e.sh.backup
.github/actions/run-tests/: action.yaml  run_tests.sh
.github/actions/test-run-title/: action.yaml
.github/actions/test_resources/: action.yaml  fetch.sh  package.json  save.sh
.github/workflows/: api_test.yaml  configurable_run.yaml  manual_run.yaml  manually_run.yaml  nightly.yaml  nightly_workflow.yaml  on_pull_request.yaml  screenshot_test.yaml  test_full_workflow.yaml  web_test.yaml
11/: index.html
11/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
11/data/attachments/: 101cc8756f8d9106.txt  102898473fa6f533.txt  10623a840319a344.txt  109d6d81758bd090.txt  109f3a4c93340825.txt  10f224c24b5493da.txt  11248149f9129220.txt  113d2ceb19dd7249.txt  11400aae84e92795.txt  1146ff5b738ad1cb.txt  11821c153f5c58a2.txt  (+1252 more)
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  duration-trend.json  history.json
11/widgets/: behaviors.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
12/: index.html
12/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json  history.json
12/widgets/: behaviors.json  categories-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
13/: index.html
13/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: categories-trend.json  duration-trend.json  history-trend.json  retry-trend.json
13/widgets/: behaviors.json  duration.json  executors.json  severity.json  suites.json  summary.json
14/: index.html
14/export/: influxDbData.txt
14/history/: duration-trend.json  history.json  retry-trend.json
14/widgets/: categories-trend.json  executors.json  history-trend.json  summary.json
15/: index.html
15/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: categories-trend.json  history.json
15/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
23/: index.html
23/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  history.json  retry-trend.json
23/widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  suites.json  summary.json
3/: index.html
3/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
3/export/: influxDbData.txt  prometheusData.txt
3/history/: history.json
3/widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
api_test/: index.html
api_test/3/: index.html
configurable_run/: index.html
configurable_run/67/: index.html
configurable_run/71/: index.html
configurable_run/72/: index.html
configurable_run/last-history/: history.json
env/: .env.local.example
last-history/: retry-trend.json
nightly/: index.html
nightly/10/: index.html
nightly/2/: index.html
nightly/4/: index.html
nightly/5/: index.html
nightly/6/: index.html
nightly/8/: index.html
nightly/9/: index.html
nightly/last-history/: categories-trend.json  duration-trend.json  history-trend.json
on_pull_request/: index.html
on_pull_request/55/: index.html
on_pull_request/59/: index.html
on_pull_request/last-history/: duration-trend.json  history-trend.json
resources/config/: .env.local.example
screenshot_test/: index.html
screenshot_test/27/: index.html
screenshot_test/28/: index.html
screenshot_test/29/: index.html
screenshot_test/30/: index.html
screenshot_test/31/: index.html
screenshot_test/32/: index.html
screenshot_test/33/: index.html
screenshot_test/last-history/: duration-trend.json  history-trend.json
src/browser/: capability_builder.py  chrome_strategy.py  chrome_strategy_mixin.py  driver_manager.py  firefox_strategy.py  firefox_strategy_mixin.py  remote_chrome_strategy.py  remote_firefox_strategy.py
src/client/: auth_api_client.py  brand_api_client.py  cart_api_client.py  github_api_client.py  product_api_client.py  user_api_client.py  verify_login_api_client.py
src/config/: config.py
src/ex/: exception.py
src/mapper/: brand_mapper.py  category_mapper.py  product_mapper.py  user_mapper.py
src/model/: address.py  brand.py  card.py  cart.py  category.py  contact.py  credentials.py  price.py  product.py  product_item_info.py  product_items_info.py  review.py  test_data.py  user.py
src/service/: auth_api_service.py  brand_api_service.py  cart_api_service.py  github_api_service.py  product_api_service.py  selenoid_api_service.py  user_api_service.py
src/util/: allure_util.py  collection_util.py  data_generator.py  duration_util.py  email_util.py  file_util.py  httpx_log_formatter_util.py  image_util.py  invoice_util.py  json_path_util.py  list_util.py  range_util.py  retry_util.py  screen_diff.py  step_logger.py  string_util.py  system_util.py  test_thread_id_store.py  time_util.py  type_util.py  user_store.py
tests/: conftest.py  temp_test.py
tests/api/: base_api_test.py
tests/data_provider/: card_data_provider.py  review_data_provider.py  user_data_provider.py
tests/web/: base_e2e_test.py  base_test.py  base_web_component_test.py  base_web_test.py  conftest.py
(+25661 files in other folders)
