[tool.poetry]
name = "automation_exercise"
version = "0.1.0"
description = ""
authors = ["arrnel <arrnel@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
faker = "==39.0.0"
httpx = ">=0.28,<1.0"
pydantic = "^2.11.9"
pytest = "^8.4.2"
pytest-check = "^2.5.4"
python = "^3.13"
selene = "^2.0.0rc9"
six = "^1.17.0"
pillow = "^11.3.0"
numpy = "^2.3.3"
pydantic-settings = ">=2.11,<3.0"
black = "^25.9.0"
jsonpath-ng = ">=1.7,<2.0"
beautifulsoup4 = ">=4.12,<5.0"
dataclasses-json = ">=0.6,<1.0"
pytest-xdist = ">=3.8,<4.0"
webdriver-manager = "==4.0.2"
allure-pytest = "==2.14.2"
flake8-pyproject = "^1.2.4"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = []
filterwarnings = [
    "ignore:Setting per-request cookies=.*:DeprecationWarning"
]
markers = [
    "api_test: API tests",
    "web_test: Web tests (contains screenshot_test)",
    "screenshot_test: Screenshot tests",
    "e2e_test: e2e tests",

    "slow: slow tests",
    "fast: fast tests",

    # ----------
    # API TESTS
    # ----------
    "auth_api_test: Auth API tests",
    "brand_api_test: Brand API tests",
    "product_api_test: Product API tests",
    "user_api_test: User API tests",
    "verify_login_api_test: Verify login API tests",

    # ----------
    # UI TESTS
    # ----------
    # BASE COMPONENTS
    "component_test: Component tests",
    "breadcrumb_component: Tests of breadcrumb component",
    "header_component: Tests of site header component",
    "notification_component: Tests of notification component",
    "page_scroller_component: Tests of page scroller",
    "subscription_component: Tests of subscription component (in footer)",

    "address_component: Tests of address component",
    "auth_component: Tests of auth component",
    "login_component: Tests of login component",
    "carousel_component: Tests of carousel component",
    "image_carousel_component: Tests of image carousel component",
    "product_carousel_component: Tests of product carousel component",
    "product_card_component: Tests of product card component",
    "product_details_component: Tests of product details component",

    "disabled_by_issue(issue_id, reason): skip test if GitHub issue is opened",
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist"
]

ignore = [
    "E203",
    "W503"
]
